name: rdf4store
version: 0.1.6.2
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: access to http server of 4store triple store (and other sparql servers)
description:
    use the simple http call to access 4store
    0.1.2  done for rdfeditor 0.1.2
    0.1.3 for crud operations
    0.1.4 reduction for query used for dove
    0.1.5 reconstruction jan 2017
author: Andrew U. Frank

library
    exposed-modules:
        Store.StoreAlg
--        Store.FourStore
--        Store.Virtuoso
        Store.Fuseki
--        Store.RDFstore.Checks
        Store.RDFstore.PrefixMap
        Store.RDFstore.Structure
--        Store.RDFstore.HttpCall
    build-depends:
        uniform-strings
        ,uniform-error
        ,uniform-fileio
        ,uniform-algebras
        ,uniform-time
--        ,HTTP
        ,base
        ,bytestring
        ,containers
        ,ghc-prim
--        ,http-client
--        ,network
        ,rdf4h
        ,rdf4hextension
        ,text
        ,xml
--        , network-uri
        , uniform-http
    hs-source-dirs: .
    other-modules:
--        Store.RDFstore.Test

--executable fuseki4store
--     main-is: MainFuseki.hs
--     build-depends:
--         base -any,
--         uniform-strings -any,
--         uniform-error -any,
--         uniform-fileio -any,
--         uniform-algebras -any,
--         uniform-time -any,
--         uniform-convenience,
--         HTTP -any,
--         bytestring -any,
--         containers -any,
--         ghc-prim -any,
--         http-client -any,
--         network -any,
--         rdf4h -any,
--         rdf4hextension -any,
--         network-uri -any,
--         text -any,
--         xml -any,
--         rdf4store -any
--     hs-source-dirs: src

-- executable virtuoso4store
--      main-is: MainVirtuoso.hs
--      build-depends:
--          base -any,
--          uniform-strings -any,
--          uniform-error -any,
--          uniform-fileio -any,
--          uniform-algebras -any,
--          uniform-time -any,
--          uniform-convenience,
--          HTTP -any,
--          bytestring -any,
--          containers -any,
--          ghc-prim -any,
--          http-client -any,
--          network -any,
--          rdf4h -any,
--          rdf4hextension -any,
--          network-uri -any,
--          text -any,
--          xml -any,
--          rdf4store -any
--      hs-source-dirs: src

-- executable fourstore4store
--     main-is: MainFourStore.hs
--     build-depends:
--         base -any,
--         uniform-strings -any,
--         uniform-error -any,
--         uniform-fileio -any,
--         uniform-algebras -any,
--         uniform-time -any,
--         HTTP -any,
--         bytestring -any,
--         containers -any,
--         ghc-prim -any,
--         http-client -any,
--         network -any,
--         rdf4h -any,
--         rdf4hextension -any,
--         network-uri -any,
--         text -any,
--         xml -any,
--         rdf4store -any
--     hs-source-dirs: src
