name:                storeInJena
version:             0.1.2
synopsis:            store a file in jena
description:         store rdf in ntriple format in jena
homepage:            https://github.com/githubuser/LitTextWork#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew U. Frank
maintainer:          frank@geoinfo.tuwien.ac.at
copyright:           2017 andrew u frank
category:            Web
build-type:          Simple
cabal-version:       >=1.20
extra-source-files:  README.md

library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , text
--        , buchCode
        , HTF
        , rdf4hextension
        , litFoundation
        , split
        , MissingH
        , bytestring
        , zlib
        , CmdLineUtilities
--        , parsec
--        , csv
    exposed-modules:
        -- in order of inclusion
        Process.StoreOneFile
--        Process.AllNTGZ
--        Process.OneQuery
        Process.OneConstruct
--        Process.OneUpdate
--        Process.DeleteOneGraph

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .


executable store6
-- store all nt.gz files in fuseki expand in haskell
-- because fuseki cannot unzip multi-session and pass as multipart to fuseki server
  hs-source-dirs:      src
  main-is:             store.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-http
        , text
        , optparse-applicative
        , litFoundation
        , storeInJena
        , pipes
        , CmdLineUtilities
  other-modules:
--
--
--executable query6
--  hs-source-dirs:      src
--  main-is:             query.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--        , HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-convenience
--        , uniform-error
--        , uniform-http
--        , text
--        , pipes
--        , litFoundation
--        , storeInJena
--  other-modules:
--
--
executable construct6
  hs-source-dirs:      src
  main-is:             construct.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-http
        , text
        , pipes
        , litFoundation
        , storeInJena
        , CmdLineUtilities
  other-modules:
--
--Test-Suite storeTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    TestMain.hs
--    build-depends: base
--        , HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-convenience
--        , uniform-error
--        , uniform-http
--        , text
--        , storeInJena
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:


