name: litFoundation
version: 0.1.9.3

cabal-version: >=1.24
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: the code for reading the files
description:
     the file read
     0.1.9.1   LitText.Foundation as structure

author: Andrew U. Frank

library
    build-depends:
        base
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , uniform-algebras
        , network-uri
        , uniform-http
        , optparse-applicative
        , pipes
        , rdf4hextension

    exposed-modules:
        LitText.Foundation
        LitText.Foundation.TextDescriptor
        LitText.Foundation.LanguageTypedText
        LitText.Foundation.ServerNames
        LitText.Foundation.Flags
        LitText.Foundation.BuchToken
        LitText.Foundation.Classes4text

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite  TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-error
        , uniform-convenience
        , litFoundation
        , uniform-http
        , pipes
    hs-source-dirs: tests
    default-language: Haskell2010
    other-modules:
        LitText.Foundation.TextDescriptor_test
        LitText.Foundation.LanguageTypedText_test
        LitText.Foundation.ServerNames_test
        LitText.Foundation.BuchToken_test
